# test-db-builder-python

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.rst  SECURITY.md  error_code_config.yml  noxconfig.py  noxfile.py  pyproject.toml
.build_output/jobs/2025_12_02_10_36_17_1_SpawnTestEnvironmentWithDockerDB/: TASK_FAILED
.build_output/jobs/2025_12_02_10_36_17_1_SpawnTestEnvironmentWithDockerDB/dependencies/SpawnTestEnvironmentWithDockerDB_af7db0f1d6/: dynamic
.build_output/jobs/2025_12_02_10_36_17_1_SpawnTestEnvironmentWithDockerDB/outputs/SpawnTestEnvironmentWithDockerDB_af7db0f1d6/PrepareDockerNetworkForTestEnvironment_de96bdcd72/: failure
.build_output/jobs/2025_12_02_10_36_17_1_SpawnTestEnvironmentWithDockerDB/timers/PrepareDockerNetworkForTestEnvironment_de96bdcd72/state/: creation  first_run
.build_output/jobs/2025_12_02_10_36_17_1_SpawnTestEnvironmentWithDockerDB/timers/SpawnTestEnvironmentWithDockerDB_af7db0f1d6/state/: creation  first_run  runs
.env.example/: tddb.toml
.github/workflows/: build-and-publish.yml  check-release-tag.yml  checks.yml  gh-pages.yml  matrix-all.yml  matrix-exasol.yml  matrix-python.yml  report.yml  slow-checks.yml
dbbuilder/: dialect.py  schema.py
dbbuilder/dialects/: exasol.py
doc/: api.rst  conf.py  developer_guide.rst  faq.rst  index.rst  user_guide.rst
doc/changes/: changelog.md  changes_1.0.0.md  unreleased.md
doc/developer_guide/: developer_guide.rst
doc/user_guide/: user_guide.rst
exasol/tdbp/: database_object.py  database_object_listener.py  schema.py  table.py  tdbp_config.py  version.py
exasol/tdbp/dialects/exasol/: exasol_connection_factory.py  exasol_fingerprint_provider.py  exasol_identifier.py  exasol_immediate_database_object_writer.py  exasol_object_factory.py
tdbp/: DatabaseObjectWriter.py  database_object.py  database_object_listener.py  schema.py  table.py
tdbp/dialects/: database_object_factory.py  dialect.py
tdbp/dialects/exasol/: exasol.py  exasol_connection_factory.py  exasol_immediate_database_object_writer.py  exasol_object_factory.py
test/integration/dialects/exasol/: conftest.py  exasol_assertions.py  test_exasol_dialect.py  test_exasol_object_factory.py  test_purge_user_objects.py
test/unit/: test_config.py  test_schema.py  test_table.py
test/unit/dialects/exasol/: test_exasol_dialect.py  test_exasol_identifier.py
test/unit/exasol/: test_exasol_dialect.py
test_db_builder_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
