[project]
name = "test-db-builder-python"
version = "0.1.0"
description = "Write compact code to setup up database contents in integration tests"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Sebastian Bär", email = "sebastian.baer@exasol.com" }
]

dependencies = [
    "pytest",
    "pyexasol",
    # Move the following to test dependencies
    "exasol-integration-test-docker-environment"
]

[dependency-groups]
dev = [
    "exasol-toolbox (>=3.0.0,<4.0.0)"
]

[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 5.0
ignore = []

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.ruff.lint]
extend-ignore = [
    "E",      # Syntax errors
    "F",      # Pyflakes rules (excluding F401)
    "UP",     # pyupgrade rules
    "D",      # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[[tool.mypy.overrides]]
module = [
    "test.*",
]
ignore_errors = true

[tool.sonar]
projectKey = "com.exasol:{{cookiecutter.repo_name}}"
host.url = "https://sonarcloud.io"
organization = "exasol"
exclusions = "exasol/{{cookiecutter.package_name}}/version.py"
